增加内容 产品 解决方案 技术 资源

--- a/index.html
+++ b/index.html
@@ -24,13 +24,49 @@
         </div>
         <!-- Hero content: will be in the middle -->
         <div class="hero-body">
-            <div class="container has-text-centered">
-                <p class="title">
-                    建设中
-                </p>
-                <p class="subtitle">
-                    under construction
-                </p>
+            <div class="tile is-ancestor">
+                <div class="tile is-vertical is-8">
+                    <div class="tile">
+                        <div class="tile is-parent is-vertical">
+                            <article class="tile is-child notification is-warning">
+                                <p class="title">产品</p>
+                                <p class="subtitle">建设中</p>
+                                <div class="content">
+                                    <!-- Content -->
+                                </div>
+                            </article>
+                        </div>
+                        <div class="tile is-parent">
+                            <article class="tile is-child notification is-info">
+                                <p class="title">解决方案</p>
+                                <p class="subtitle">建设中</p>
+                                <div class="content">
+                                    <!-- Content -->
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="tile is-parent">
+                        <article class="tile is-child notification is-danger">
+                            <p class="title">技术</p>
+                            <p class="subtitle">建设中</p>
+                            <div class="content">
+                                <!-- Content -->
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="tile is-parent">
+                    <article class="tile is-child notification is-success">
+                        <div class="content">
+                            <p class="title">资源</p>
+                            <p class="subtitle">建设中</p>
+                            <div class="content">
+                                <!-- Content -->
+                            </div>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
         <!-- Hero footer: will stick at the bottom -->
